@@ -202,7 +202,7 @@ KronolithCore = {
                                     $('kronolithTimeMarker').show();
                                 }
                                 // Scroll to the work day start time.
-                                $('kronolithView' + locCap).down('.kronolithViewBody').scrollTop = 9 * this[loc + 'Sizes'].height;
+                                $('kronolithView' + locCap).down('.kronolithViewBody').scrollTop = Kronolith.conf.day_hour_start / 2 * this[loc + 'Sizes'].height;
                             }
                             this.loadNextView();
                         }.bind(this)
